@@ -291,6 +291,22 @@ public class Primitives {
 		};
 	}
 
+    public static ProtoObject p214(ProtoObject receiver, ThisContext thisContext, ProtoObject arg1, ProtoObject arg2, ProtoObject arg3, ProtoObject arg4, ProtoObject arg5, ProtoObject arg6, ProtoObject arg7) {
+        ProtoObject result = ProtoObject.FALSE;
+        while(result == ProtoObject.FALSE) {
+            result = send(receiver, "value", thisContext);
+        }
+        return ProtoObject.NIL;
+    }
+
+    public static ProtoObject p215(ProtoObject receiver, ThisContext thisContext, ProtoObject arg1, ProtoObject arg2, ProtoObject arg3, ProtoObject arg4, ProtoObject arg5, ProtoObject arg6, ProtoObject arg7) {
+        ProtoObject result = ProtoObject.TRUE;
+        while(result == ProtoObject.TRUE) {
+            result = send(receiver, "value", thisContext);
+        }
+        return ProtoObject.NIL;
+    }
+
 	public static ProtoObject putAt(ProtoObject receiver, ProtoObject value, int index) throws ClassNotFoundException {
 		// answers receiver.
 //		System.out.println("putAt() " + receiver + " put: " + value + " at: " + index);
